# xwrouter

./: CMakeLists.txt  README.md  register_message_handler.h  register_routing_table.h  xwrouter.h
demo/: CMakeLists.txt  commands.cc  commands.h  demo_routing.h  main.cc  main.h
message_handler/: rumor_message_handler.h  wrouter_message_handler.h  xwrouter_handler.h  xwrouter_xid_handler.h  xwrouter_xip_handler.h
multi_routing/: multi_routing.h  small_net_cache.h
root/: root_message_handler.h  root_routing.h  root_routing_manager.h
src/: multi_routing.cc  register_message_handler.cc  register_routing_table.cc  root_message_handler.cc  root_routing.cc  root_routing_manager.cc  rumor_message_handler.cc  small_net_cache.cc  wrouter_message_handler.cc  xwrouter.cc  xwrouter_handler.cc  xwrouter_xid_handler.cc  xwrouter_xip_handler.cc
tests/: CMakeLists.txt  test_main.cc  test_message_handler.cc  test_multi_routing.cc  test_root_routing.cc  test_root_routing_manager.cc
wrouter_utils/: wrouter_base_routing.h  wrouter_utils.h
xwrouter.xcodeproj/: project.pbxproj
xwrouter.xcodeproj/xcuserdata/imac.xcuserdatad/xcschemes/: xcschememanagement.plist
